bugfix: weird spacing on the gallery

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ Photos
 }
 
 .gallery-grid img {
-    width: 100%;  
+    width: 200px;  
     height: 300px;
     object-fit: cover;  
     border-radius: 2px; 
